objects/Case_Ownership_Tracking__c.object
<CustomObject>
    <description>Case Ownership changes with start and end date/time stamp will be stored using this object</description>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Waiting for Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Parent Case Record</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Ownership Tracking</relationshipLabel>
        <relationshipName>Case_Ownership_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Days_Outstanding_Number__c</fullName>
        <description>Days it was or is outstanding with the user or partner. Calculated based considering business hours.</description>
        <inlineHelpText>Days it was or is outstanding with the user or partner. Calculated based considering business hours.</inlineHelpText>
        <label>Number of Days Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <description>Days it was or is outstanding with the user or partner</description>
        <formula>IF(  ISBLANK( End__c ) , ROUND( TODAY() - 
DATEVALUE(Start__c) , 0) , ROUND( DATEVALUE(End__c) - 
DATEVALUE(Start__c) , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <description>End date/time of ownership.</description>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>Queue name assigned as a owner of the case.</description>
        <label>Queue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>Start date/time of ownership.</description>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <label>User Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role_Title__c</fullName>
        <description>Name of the User Role</description>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User record assigned as a owner of the case</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Ownership_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Ownership Tracking</label>
    <nameField>
        <displayFormat>COT-{00000000}</displayFormat>
        <label>COT #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Ownership Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>